solved visibility cards on about

--- a/src/app/features/biography/about/about.component.css
+++ b/src/app/features/biography/about/about.component.css
@@ -45,14 +45,18 @@
 .card {
   width: 100%;
   height: 100%;
-  /* background-color: rgb(64, 170, 105);
-  box-shadow: 0px 0px 10px rgba(19, 202, 49, 0.5); */
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: center;
+  background-color: transparent;
+  border: none;
+}
+
+.card:hover{
+  background-color: rgb(64, 170, 105);
 }
 .card h2 {
-  display: block;
+  /* display: block; */
   text-align: center;
 }
 
@@ -60,16 +64,11 @@
   display: none;
   padding: 10px;
   margin: 1px 0;
+  font-size: 1rem;
+  /* display: none; */
 }
-
-.card:hover h2 {
-  display: none;
-}
-
 .card:hover p {
   display: block;
-  background-color: rgb(64, 170, 105);
-  box-shadow: 0px 0px 10px rgba(19, 202, 49, 0.5);
 }
 
 .card h2 {
@@ -78,7 +77,6 @@
   color:aqua;
 }
 
-.card p {
-  font-size: 1rem;
+.card:hover h2 {
   display: none;
 }
